--- a/src/Databases/competition_db/PostgreSQL/Applications/CompetitionQuestionOrganiserApp/src/main/resources/application.properties
+++ b/src/Databases/competition_db/PostgreSQL/Applications/CompetitionQuestionOrganiserApp/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=CompetitionDataManipulatorApp
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/competitondb
-spring.datasource.username=postgres
-spring.datasource.password=csd1993
+spring.datasource.username=oguz
+spring.datasource.password=1234567
 spring.datasource.driver-class-name=org.postgresql.Driver
 app.data.file=./data/milyonist.csv
 
